--- a/css/styles.css
+++ b/css/styles.css
@@ -748,7 +748,7 @@ img {
 .modal-form-comment:focus {
   border-color: #4d5ae5;
 }
-input:checked {
+.checkbox:checked + .modal-form-agreement > .modal-form-desc {
   background-color: var(--#404bbf);
   border: none;
   fill: var(--#F4F4FD);
@@ -792,20 +792,18 @@ input:checked {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 }
 
 .modal-form-link {
   color: var(--iris, #4d5ae5);
-}
-.modal-form-btn {
-  margin-top: 24px;
+  text-decoration: underline;
 }
 .modal-form-input {
   padding-left: 38px;
 }
 .modal-form-icon {
-  fill: none;
-  stroke: #2e2f42;
+  fill: #2e2f42;
   position: absolute;
   top: 50%;
   left: 16px;
@@ -831,9 +829,9 @@ input:checked {
   justify-content: space-between;
 }
 .button-form {
-  display: block;
-  min-width: 169px;
-  height: 56px;
+  display: flex;
+  min-width: 165px;
+  height: 40px;
   justify-content: center;
   align-items: center;
   font-family: "Roboto", sans-serif;
@@ -847,6 +845,7 @@ input:checked {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
 }
 .button-form-icon {
   fill: none;
