--- a/css/styles.css
+++ b/css/styles.css
@@ -749,9 +749,9 @@ img {
   border-color: #4d5ae5;
 }
 .checkbox:checked + .modal-form-agreement > .modal-form-desc {
-  background-color: var(--#404bbf);
+  background-color: #404bbf;
   border: none;
-  fill: var(--#F4F4FD);
+  fill: #f4f4fd;
 }
 .modal-form-comment {
   width: 100px;
@@ -829,9 +829,9 @@ img {
   justify-content: space-between;
 }
 .button-form {
-  display: flex;
-  min-width: 165px;
-  height: 40px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
   justify-content: center;
   align-items: center;
   font-family: "Roboto", sans-serif;
