--- a/css/styles.css
+++ b/css/styles.css
@@ -762,7 +762,7 @@ img {
   fill: var(--clasic-background-color);
 }
 .modal-form-comment {
-  width: 100px;
+  width: 100%;
   height: 120px;
   padding: 8px 16px;
   margin-top: 4px;
